# spotcli

./: .gitignore  CMakeLists.txt  README.md  buildAndRun.sh  run.sh
include/: authSpotify.hpp  playback.hpp  playlist.hpp  utils.hpp
src/: authSpotify.cpp  main.cpp  playback.cpp  playlist.cpp  token_repo.cpp  utils.cpp
